--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Copy-paste integration
-set-option -g default-command "reattach-to-user-namespace -l bash"
+#set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -16,3 +16,19 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 set -g default-terminal "screen-256color"
+
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'yardnsm/tmux-1password'
+set -g @themepack 'powerline/double/yellow'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
