--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,7 @@ set -g @themepack 'powerline/double/yellow'
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
